src/main/default/objects/Override__c/fields/Catalog_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalog Item</label>
    <referenceTo>Catalog_Item__c</referenceTo>
    <relationshipLabel>Overrides</relationshipLabel>
    <relationshipName>Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>