src/main/default/objects/Override__c/fields/CustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>CustomerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Office</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Overrides</relationshipLabel>
    <relationshipName>Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>