src/main/default/objects/Override__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>AND(OR(ISBLANK(Effective_Date__c), Effective_Date__c &lt;=TODAY()), OR(ISBLANK( Expiration_Date__c ), Expiration_Date__c >=TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>