src/main/default/objects/Override__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Office</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Overrides (Office)</relationshipLabel>
    <relationshipName>Overrides_Office</relationshipName>
    <type>Lookup</type>
</CustomField>