src/main/default/objects/Override__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applies_to_SObject__c</columns>
    <columns>Override_Type__c</columns>
    <columns>Cost__c</columns>
    <columns>Price__c</columns>
    <columns>CustomerAccount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>